@@ -1,4 +1,4 @@
-/*$Id: mfregis.c,v 1.6 1999/11/05 14:47:08 bsmith Exp bsmith $*/
+/*$Id: mfregis.c,v 1.7 2000/02/02 20:10:02 bsmith Exp bsmith $*/
 
 #include "src/snes/mf/snesmfj.h"   /*I  "snes.h"   I*/
 
@@ -28,8 +28,8 @@ int MatSNESMFRegisterAll(char *path)
   PetscFunctionBegin;
   MatSNESMFRegisterAllCalled = PETSC_TRUE;
 
-  ierr = MatSNESMFRegisterDynamic("default",path,"MatSNESMFCreate_Default",MatSNESMFCreate_Default);CHKERRQ(ierr);
-  ierr = MatSNESMFRegisterDynamic("wp",path,"MatSNESMFCreate_WP",MatSNESMFCreate_WP);CHKERRQ(ierr);
+  ierr = MatSNESMFRegisterDynamic(MATSNESMF_DEFAULT,path,"MatSNESMFCreate_Default",MatSNESMFCreate_Default);CHKERRQ(ierr);
+  ierr = MatSNESMFRegisterDynamic(MATSNESMF_WP,path,"MatSNESMFCreate_WP",MatSNESMFCreate_WP);CHKERRQ(ierr);
   PetscFunctionReturn(0);
 }
 
